<resources>
    <string name="app_name">Борщ.Повар</string>

    <string name="tab_name_own">Главная</string>
    <string name="tab_name_meals">Блюда</string>
    <string name="tab_name_orders">Заказы</string>
    <string name="tab_name_support">Поддержка</string>

    <string name="theme_dark">Тёмная тема</string>
    <string name="theme_light">Светаля тема</string>
    <string name="theme_system">Системная тема</string>

    <string name="support_fragment_title">Помощь</string>
    <string name="support_fragment_button_read">ЧИТАТЬ</string>
    <string name="support_fragment_button_write">НАПИСАТЬ</string>
    <string name="support_fragment_faq">Собрали ответы на самые\nчастые вопросы 🙋🤔</string>
    <string name="support_fragment_chat">Поможем решить любые \n спорные вопросы 🚀🦸</string>
    <string name="support_fragment_chat_title">Чат с поддержкой</string>
    <string name="support_fragment_faq_title">FAQ</string>
    <string name="support_fragment_faq_url">https://borschapp.wixsite.com/for-cookers</string>
    <string name="support_fragment_telegram_package">org.telegram.messenger</string>
    <string name="support_fragment_telegram_need_app">Для обращения в поддержку установите, пожалуйста, Telegram</string>
    <string name="support_fragment_telegram_link">tg://resolve?domain=borsch_support</string>

    <string name="orders_fragment_title">Заказы</string>
    <string name="meals_fragment_title">Мои блюда</string>

    <string name="meals_no_information">Вы еще не добавили ни одного блюда</string>
    <string name="meals_edit">Редактировать</string>
    <string name="meals_portions">порции</string>
    <string name="meals_not_available">НЕДОСТУПНО\nДЛЯ ВЫБОРА</string>
    <string name="meals_delete">Удалить</string>
    <string name="meals_add_meal">Добавить блюдо</string>
    <string name="meals_add_select_meals">Выбор блюд</string>
    <string name="meals_add_selected_meals">Блюдо</string>
    <string name="meals_singles">Единичные</string>
    <string name="meals_lunches">Ланчи</string>
    <string name="meals_add_button">Добавить</string>
    <string name="meals_save_data">Сохранить</string>
    <string name="meals_finish_data">Завершить</string>
    <string name="meals_save_lunch">Добавить комбо-набор в меню</string>
    <string name="meals_edit_price">%s РУБ</string>
    <string name="meals_edit_weight">%s ГРАММ</string>
    <string name="meals_edit_calories">%s ККАЛ</string>
    <string name="meals_edit_cook_time">%s МИН</string>
    <string name="meals_edit_price_value">РУБ</string>
    <string name="meals_edit_weight_value">ГРАММ</string>
    <string name="meals_edit_calories_value">ККАЛ</string>
    <string name="meals_edit_cook_time_value">МИН</string>
    <string name="meals_add_name">Название</string>
    <string name="meals_add_ingredients">Ингредиенты</string>
    <string name="meals_add_price">Цена</string>
    <string name="meals_add_weight">Вес</string>
    <string name="meals_add_cook_time">Время</string>
    <string name="meals_add_calories">Калории</string>
    <string name="meals_add_description">Описание</string>
    <string name="meals_add_hints_description">Введите описание</string>
    <string name="meals_add_hints_weight">Укажите вес</string>
    <string name="meals_add_hints_cook_time">Укажите время приготовления</string>
    <string name="meals_add_hints_calories">Укажите количество калориев</string>
    <string name="meals_add_hints_select_meals">Выберите блюда, которые входят в состав комбо-набора</string>
    <string name="meals_add_meals_in_lunch">Блюда в составе комбо</string>
    <string name="meals_add_on_one_portion">На 1 порцию</string>
    <string name="meals_add_for_one_portion">За 1 порцию</string>
    <string name="meals_add_for_one_lunch">За 1 комбо набор</string>
    <string name="meals_add_price_for_lunch">Цена комбо набора</string>
    <string name="meals_add_sale_for_lunch">Предложите клиенту скидку на комбо-набор и увеличьте свои шансы на получение заказа</string>
    <string name="meals_add_for_one_lunch_warn">Внимание! Цена комбо набора рассчитывается автоматически исходя из совокупной цены добавленных в него блюд</string>
    <string name="meals_add_hints_price">Укажите цену</string>
    <string name="meals_add_hints_name">Укажите название</string>
    <string name="meals_add_images">Фотографии</string>
    <string name="meals_select_type_create">Создать</string>
    <string name="meals_select_type_meal">Новое блюдо</string>
    <string name="meals_select_type_lunch">Новый ланч</string>
    <string name="meals_select_type_meal_description">Единичное блюдо, которое состоит из 1 порции. Например яичница!</string>
    <string name="meals_select_type_lunch_description">Ланч состоит из нескольких блюд, которые уже есть у вас в меню</string>
    <string name="meals_select_type_lunch_warn">Чтобы начать добавлять комбо-наборы создайте хотя бы 2 единичных блюда</string>

    <string name="orders_type_all">Все</string>
    <string name="orders_type_active">Активные</string>
    <string name="orders_status_created">Создан</string>
    <string name="orders_status_completed">Завершен</string>
    <string name="orders_status_rejected">Отклонен</string>
    <string name="orders_status_canceled">Отменён</string>
    <string name="orders_status_accepted">Заказ в работе</string>
    <string name="orders_status_cooking">Готовится</string>
    <string name="orders_status_can_pickup">Готов к самовывозу</string>
    <string name="orders_status_delivering">Доставка</string>
    <string name="orders_status_change">Изменить статус</string>
    <string name="orders_number">Заказ №%s</string>
    <string name="orders_sum">%s ₽</string>
    <string name="orders_no_information">У вас еще нет заказов</string>
    <string name="order_delivery">Доставка</string>
    <string name="order_pickup">Самовывоз</string>

    <string name="order_offer_new_order">Новый заказ</string>
    <string name="order_offer_new_orders">Новый заказ</string>
    <string name="order_offer_details">Детали</string>
    <string name="order_offer_decline">Отклонить</string>
    <string name="order_offer_on_map">НА КАРТЕ</string>
    <string name="order_offer_open_map">Открыть карту</string>
    <string name="order_offer_see_map">Посмотреть адрес на карте</string>
    <string name="order_offer_address">Адрес</string>
    <string name="order_offer_dishes">Блюда</string>
    <string name="order_offer_DETAILS">ДЕТАЛИ</string>
    <string name="order_offer_client">Клиент</string>
    <string name="order_offer_client_ok">У клиента отсутствуют\nнегативные отзывы</string>
    <string name="order_offer_client_bad">ЧАСТО ОТМЕНЯЕТ ЗАКАЗЫ</string>
    <string name="order_offer_pickup_description">Клиент заберет заказ\nпо указанному вами адресу</string>

    <string name="own_welcome">Добрый день, %s!</string>
    <string name="own_profile">Профиль</string>
    <string name="own_status">Статус активности</string>
    <string name="own_accept_orders">Принимаю заказы</string>
    <string name="own_subscription_for">Подписка до %s</string>
    <string name="own_active_meals">Активные блюда</string>
    <string name="data_edit">Изменить</string>
    <string name="own_delivery_title">Варианты доставки</string>
    <string name="own_pickup">Самовывоз</string>
    <string name="own_delivery_radius">Доставка в радиусе</string>
    <string name="own_last_7_days">Последние 7 дней</string>
    <string name="own_profit">Прибыль</string>
    <string name="own_rating">Ваш рейтинг</string>
    <string name="own_container_title">Магазин\nКонтейнеров</string>
    <string name="own_container_subtitle">Широкий ассортимент для всех блюд</string>
    <string name="own_container_buy">Докупить контейнеры</string>
    <string name="own_enough_rate">Мало оценок</string>
    <string name="own_buy_containers_url">http://borsch4cook.tilda.ws/</string>

    <string name="order_offer_accept_button">ПРИНЯТЬ\n%s ₽</string>
    <string name="order_offer_accept_button2">Принять, %s ₽</string>

    <string name="active_meals_status">Статус активности</string>
    <string name="active_meals_portions">Порций</string>

    <string name="order_details_sum">Сумма заказа</string>
    <string name="order_details_list">Состав заказа</string>
    <string name="order_details_chat">Чат с клиентом</string>
    <string name="order_details_delivery_type">Тип доставки</string>
    <string name="order_details_status">Статус заказа</string>
    <string name="order_details_button_hint">Меняйте статус заказа по мере готовности</string>

    <string name="delivery_type_pickup">Самовывоз</string>
    <string name="delivery_type_courier">Доставка курьеров</string>

    <string name="auth_btn_send_code">Выслать код</string>
    <string name="auth_input_phone_title">Введите номер</string>
    <string name="auth_input_phone_sub_title">Чтобы создать аккаунт</string>
    <string name="auth_input_phone_hint">Номер телефона</string>
    <string name="auth_validate_phone_title">Подтверждение номера</string>
    <string name="auth_send_again_sms_title">Повторная отправка через</string>
    <string name="auth_sms_code_hint">СМС код</string>
    <string name="auth_sms_code_validate_description">Введите код, который\nмы отправили вам на телефон</string>
    <string name="auth_send_sms_again_btn">Отправить еще раз</string>

    <string name="input_name_title">Имя и фамилия</string>
    <string name="input_name_name">Имя</string>
    <string name="input_name_second">Фамилия</string>

    <string name="file_selection_failed">Не удалось выбрать фото</string>
    <string name="file_chooser_not_found">Для загрузки фото, пожалуйста, установите файловый менеджер</string>
    <string name="file_choose_photo">Выберите фотографию</string>

    <string name="address_search_hint">Поиск</string>

    <string name="default_search_hint">Введите текст для поиска</string>

    <string name="btn_ok">OK</string>

    <string name="error_empty_text">Что-то пошло не так</string>
    <string name="error_btn_text">Обновить</string>
    <string name="error_empty_filed">Не вся информация заполнена</string>

    <string-array name="months_s">
        <item>января</item>
        <item>февраля</item>
        <item>марта</item>
        <item>апреля</item>
        <item>мая</item>
        <item>июня</item>
        <item>июля</item>
        <item>августа</item>
        <item>сентября</item>
        <item>октября</item>
        <item>ноября</item>
        <item>декабря</item>
    </string-array>

    <string name="title_redirect">Перейти в\nмагазин приложений</string>
    <string name="no_internet">Нет интернет-соединения</string>
    <string name="old_api_error">API устарело</string>
    <string name="server_error">Проблемы на сервере. Скоро все исправим</string>
    <string name="default_error">Что-то пошло не так. Попробуй еще раз</string>
    <string name="api_not_connect_error">Google Play устарели</string>

    <string name="profile_page_title">Профиль</string>
    <string name="profile_photo">Фотография</string>
    <string name="change_avatar_photo">Изменить</string>
    <string name="profile_name">Имя и фамилия</string>
    <string name="profile_cooker_address">Физический адрес</string>
    <string name="profile_phone">Номер телефона</string>

    <string name="dialog_success_button">Ясно</string>
    <string name="dialog_help_status">Чтобы клиенты могли найти вас в поиске активируйте статус "Принимаю заказы" 😊</string>
    <string name="dialog_help_delivery">"Самовывоз" - это когда клиенты приходят к вам домой за заказами,  а "доставка в радиусе" значит, что вы готовы встретиться с клиентом на улице в пределах радиуса от вашего дома (радиус можно изменить в настройках профиля) 😉</string>
</resources>
