<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/tt_norms_bold"
            android:gravity="center"
            android:text="@string/auth_input_phone_title"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/tt_norms_regular"
            android:gravity="center"
            android:text="@string/auth_input_phone_sub_title"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="22dp"
            android:theme="@style/InputLayoutTextStyle">

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tt_norms_regular"
                android:hint="@string/auth_input_phone_hint"
                android:importantForAutofill="no"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="LabelFor,TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/legacyTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="22dp"
            android:fontFamily="@font/tt_norms_regular"
            android:gravity="center"
            android:lineSpacingExtra="3dp"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <Button
            android:id="@+id/sendCodeBtn"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/tt_norms_medium"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:text="@string/auth_btn_send_code"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@color/btn_color_40"
            app:cornerRadius="8dp" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>