<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dataContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottom_sheet_title"
    android:orientation="vertical"
    tools:ignore="UselessParent">

    <View
        android:id="@+id/dismiss"
        android:layout_width="24dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_bottom_sheet_dismiss" />

    <Button
        android:id="@+id/addMealSaveTv"
        style="@style/SmallButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/meals_save_data"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/addMealSheetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/tt_norms_bold"
        android:textColor="@color/black"
        android:textSize="34sp"
        tools:text="Название" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/addMealSheetData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:fontFamily="@font/tt_norms_regular"
            android:inputType="textCapSentences"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:hint="Введите название блюда" />

        <TextView
            android:id="@+id/addMealSheetValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/tt_norms_italic"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone"
            tools:text="Рублей" />

        <Button
            android:id="@+id/addMealAddNewIngredientTv"
            style="@style/SmallButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/meals_add_button"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addMealNotificationLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow_bg"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="12dp"
        android:paddingEnd="20dp"
        android:paddingBottom="12dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="34dp"
            app:srcCompat="@drawable/ic_alert" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meals_add_for_one_lunch_warn"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/addMealPriceCv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:visibility="gone"
        app:cardCornerRadius="16dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:fontFamily="@font/tt_norms_medium"
                android:text="@string/meals_add_price_for_lunch"
                android:textColor="@color/black_50"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/addMealPriceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="36dp"
                android:fontFamily="@font/tt_norms_bold"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:text="494 ₽" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/addMealPriceHintLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/meals_add_sale_for_lunch"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/addMealPriceRv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/addMealEditIngredientsRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingEnd="12dp"
        android:visibility="gone"
        tools:ignore="RtlSymmetry" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>